<resources>
    <string name="app_name">BIO INFO TRACKER</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scan_qrcode">ScanQRCodeActivity</string>
    <string name="title_activity_bio_material_info">BioMaterialInfoActivity</string>


    <string name="title_about_us">About APP</string>
    <string name="title_read_qr">Read QR</string>
    <string name="title_track_material">Track Material</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_about_us">Welcome to Biomaterial Information Tracker.</string>
    <string name="desc_track_material">Tracking Parcel - EasyPost API </string>
    <string name="title_activity_qrresult">QRResultActivity</string>

    <string name="ensatIdLabel">"EnsatID: "</string>
    <string name="transferGroupIdLabel">"TransferGroupID: "</string>
    <string name="centerIdLabel">"CenterID From: "</string>
    <string name="desCenterIdLabel">"To: "</string>
    <string name="statusLabel">"Status: "</string>
    <string name="materialLabel">"Material: "</string>
    <string name="bioIdLabel">"BioID: "</string>
    <string name="transfer_id">"TransID: "</string>
    <string name="materialDatelabel">"Date: "</string>
    <string name="transferDateLabel">"Transferred Date: "</string>

    <string name="trackingNo">"Parcel Tracking Number: "</string>
    <string name="carrier">"Carrier Name: "</string>
    <string name="easyTrack">" Easy Track "</string>
    <string name="lblTrackStatus">"Status: "</string>
    <string name="lblEstDeliveryDate">"Estimated Delivery Date: "</string>
    <string name="lblSigned">"Signed By: "</string>
    <string name="lblWeight">"Weight: "</string>
    <string name="btnClear">" CLEAR "</string>
    <string name="receive">"Received"</string>
    <string name="notreceive">"Not-Received"</string>
    <string name="damage">"Damaged"</string>


    <string-array name="carrier_array">
        <item>FedEx</item>
        <item>UPS</item>
        <item>DHL</item>
        <item>LSO</item>
        <item>GLS</item>
        <item>AUS POST</item>
        <item>fastway</item>
        <item>PNL</item>
    </string-array>

</resources>
