<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:attr/activatedBackgroundIndicator" >

    <!-- TODO: Update blank fragment layout -->
    <TextView android:id="@+id/lblHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_track_material"
        android:theme="@style/headingText" />

    <TextView
        android:id="@+id/lblTrackNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trackingNo"
        android:layout_below="@+id/lblHeading" />

    <TextView
        android:id="@+id/lblCarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrier"
        android:layout_below= "@+id/lblTrackNo" />


</RelativeLayout>